<resources>
    <string name="app_name">蜜蜂小助手</string>
    <string name="action_settings">Settings</string>
    <string name="action_30">30元</string>
    <string name="action_50">50元</string>
    <string name="action_100">100元</string>
    <string name="action_200">200元</string>
    <string name="action_300">300元</string>
    <string name="action_500">500元</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_password">登录密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone">手机号码无效</string>
    <string name="error_invalid_password">密码过于简短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_invalid_img_code">请输入合法的验证码</string>
    <string name="error_incorrect_img_code">验证码不正确</string>
    <string name="error_phone_required">手机号码必须输入</string>
    <string name="error_pwd_required">登录密码必须输入</string>
    <string name="title_activity_settings">Settings</string>


    <string name="version">版本</string>
    <string name="about_me">关于作者</string>
    <string name="about_me_description">我是一个热爱Google和Android的开发者，如果你有好的idea或建议，不要犹豫，通过下面的联系方式和我沟通吧~</string>
    <string name="my_qq">970720947</string>
    <string name="contact_me">联系我</string>
    <string name="about_app_title">关于应用</string>
    <string name="about_app_content">本应用主要是提供蜜蜂话费的一些快捷操作,让你在手机上也可自由自在的做单,如有侵权,请联系处理</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
